[gd_scene load_steps=2 format=3 uid="uid://cjugk5nbwvwpb"]

[ext_resource type="Script" path="res://src/SplashVerification.gd" id="1_nvpj7"]

[node name="SplashVerification" type="CanvasLayer"]
layer = 100
script = ExtResource("1_nvpj7")

[node name="BannerImage" type="TextureRect" parent="."]
anchors_fill_parent = true
expand_ignore_size = true
stretch_mode = 5

[node name="VerificationOverlay" type="ColorRect" parent="."]
anchors_fill_parent = true
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="VerificationOverlay"]
anchors_fill_parent = true
alignment = 1

[node name="LoadingSpinner" type="Label" parent="VerificationOverlay/VBoxContainer"]
text = "‚è≥ Verifying session..."
custom_minimum_size = Vector2(0, 50)
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VerificationOverlay/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
size_flags_horizontal = 4
value = 50.0

[node name="StatusLabel" type="Label" parent="VerificationOverlay/VBoxContainer"]
text = "Loading..."
custom_minimum_size = Vector2(0, 40)
alignment = 1
